--- a/paxos-reconf.tex
+++ b/paxos-reconf.tex
@@ -667,8 +667,9 @@ may be elected and thus in which further progress can be made.
 \item \label{synod-prop} If $\prop{}{b}$ then there is a quorum $q^\textrm{I}
   \in Q^\textrm{I}(b)$ such that for every node $a \in q^\textrm{I}$ either
   $\fprom{}{a}{b}$ or else there exists a $b'$ such that $\bprom{}{a}{b}{b'}$;
-  if also ${P = \{ b' \mid \exists a \in q^\textrm{I}.  \bprom{}{a}{b}{b'} \}
-  \ne \varnothing}$ then $v(b) = v\bigl(\mathrm{max}(P)\bigr)$.
+  if also ${P \triangleq \{ b' \mid \exists a \in q^\textrm{I}.
+  \bprom{}{a}{b}{b'} \} \ne \varnothing}$ then $v(b) =
+  v\bigl(\mathrm{max}(P)\bigr)$.
 
 \item \label{synod-acc} If $\acc{}{a}{b}$ then $\prop{}{b}$.
 
@@ -852,9 +853,9 @@ safely as described in section \ref{configuration-changes} below.
 \item $\fprom{i}{a}{b}$, or
 \item $\bprom{i}{a}{b}{b'}$ for some $b'$.
 \end{itemize}
-
-Furthermore if $P = \{ b' \mid \exists a \in q. \bprom{i}{a}{b}{b'} \} \ne
-\varnothing$ then $v_i(b) = v_i\bigl(\mathrm{max}(P)\bigr)$.
+%
+Furthermore if $P \triangleq \{ b' \mid \exists a \in q. \bprom{i}{a}{b}{b'} \}
+\ne \varnothing$ then $v_i(b) = v_i\bigl(\mathrm{max}(P)\bigr)$.
 
 \item \label{paxos-acc} If $\acc{i}{a}{b}$ then $\prop{i}{b}$.
 
@@ -973,12 +974,12 @@ $b' \succ b$ having $e(b') = e$ and $\owner{b'} = a$.
 This means that ballot numbers cannot be simple integers because this would
 imply that certain eras would only have finitely many ballots. Instead an
 implementation could, for example, let $\mathbb B = \mathbb N \times \mathbb N
-\times \mathbb A$ ordered lexicographically, where $e(\langle e, n, a\rangle) =
-e$ and $\owner{\langle e, n, a \rangle} = a$. This is the approach used in
-Egalitarian Paxos\cite{egalitarian-paxos} in which eras are known as
-\textit{epochs} but this terminology is avoided here to prevent confusion with
-the epochs (views, terms, \ldots) of leader-election protocols (e.g.
-\cite{omega-meets-paxos}) which track the current leader rather than the
+\times \mathbb A$ ordered lexicographically, where $e(\langle e, n, a\rangle)
+\triangleq e$ and $\owner{\langle e, n, a \rangle} \triangleq a$. This is the
+approach used in Egalitarian Paxos\cite{egalitarian-paxos} in which eras are
+known as \textit{epochs} but this terminology is avoided here to prevent
+confusion with the epochs (views, terms, \ldots) of leader-election protocols
+(e.g.  \cite{omega-meets-paxos}) which track the current leader rather than the
 current configuration.
 
 It is also necessary to limit the promises made to only those where $e(b) \le
@@ -1096,14 +1097,14 @@ following:
 This section contains some examples of configuration changes that satisfy the
 conditions described above.  All the configurations described here have equal
 sets of quorums in phase I and phase II of each era, so for the sake of
-simplicity throughout this section define ${Q_e = Q^\textrm{I}_e =
+simplicity throughout this section define ${Q_e \triangleq Q^\textrm{I}_e =
 Q^\textrm{II}_e}$.  Implementations can ensure $Q_e \frown Q_e$ for each $e$
 by, for instance, arranging for each quorum in $Q_e$ to comprise a majority
 subset of some finite set of nodes. Slightly more generally, let a
 \textit{weight function} be a function $w : \mathbb A \to \mathbb N$ that only
 takes finitely many nonzero values. This can be used to define a configuration
-$\langle M(w), M(w) \rangle$ by \textit{weighted majority}: \[M(w) = \left\{ q
-    \;\middle|\; \sum_{a \in q} 2 w(a) > \sum_{a \in \mathbb A} w(a)
+$\langle M(w), M(w) \rangle$ by \textit{weighted majority}: \[M(w) \triangleq
+  \left\{ q \;\middle|\; \sum_{a \in q} 2 w(a) > \sum_{a \in \mathbb A} w(a)
 \right\}.\] Corollary \ref{weights-equal} in appendix \ref{weights-appendix}
 demonstrates the well-known result that $M(w) \frown M(w)$ for any weight
 function $w$.  Indeed, if $w$ and $w'$ are weight functions that differ by a
@@ -1118,7 +1119,7 @@ Raft's quorums are simple unweighted majorities of a finite set of nodes, which
 can be emulated with weight functions that only take values in $\{0, 1\}$. It
 only supports adding or removing a single node from this set which amounts to
 changing the weight of a single node by $\pm 1$. For instance, if $\mathbb A =
-\{ a_1, a_2, \ldots \}$ then define weight functions \[\wl{n}(a) =
+\{ a_1, a_2, \ldots \}$ then define weight functions \[\wl{n}(a) \triangleq
 \begin{cases} 1 & \mathrm{if } a \in \{a_1, \ldots, a_n\} \\ 0 &
 \mathrm{otherwise}\end{cases}\] and observe that ${\Mwl{3} \frown \Mwl{4}}$ and
 ${\Mwl{4} \frown \Mwl{5}}$ but ${\Mwl{3} \not\frown \Mwl{5}}$ because $\{a_1,
@@ -1346,8 +1347,8 @@ N$ are weight functions such that $\sum_{a \in \mathbb A} |w'(a) - w(a)| \le 1$
 then $M(w) \frown M(w')$.  \end{theorem}
 
 \begin{proof}Since $w$ and $w'$ take integer values, they must differ at at
-most one node by at most $1$. Let $a_0$ be the node such that $|w'(a_0) -
-w(a_0)| \le 1$ and $w(a) = w'(a)$ for all $a \ne a_0$.
+  most one node by at most $1$. Let $a_0$ be the node such that $|w'(a_0) -
+  w(a_0)| \le 1$ and $w(a) = w'(a)$ for all $a \ne a_0$.
 %
 Let $q \in M(w)$ and $q' \in M(w')$. By the definition of $M$, and since $w$
 and $w'$ take only integer values,
@@ -1358,18 +1359,15 @@ and
 %
 $\sum_{a \in q'} 2 w'(a) \ge \sum_{a \in \mathbb A} w'(a) + 1$.
 %
-Let $d_{\mathbb A} = w'(a_0) - w(a_0)$ so that $\sum_{a \in \mathbb A} w'(a) =
-\sum_{a \in \mathbb A} w(a) + d_{\mathbb A}$ and $|d_\mathbb A| \le 1$. Also
-let \[ d_{q'} =
-\begin{cases}
+Let $d_{\mathbb A} \triangleq w'(a_0) - w(a_0)$ so that $\sum_{a \in \mathbb A}
+w'(a) = \sum_{a \in \mathbb A} w(a) + d_{\mathbb A}$ and $|d_\mathbb A| \le 1$.
+Also let \[ d_{q'} \triangleq \begin{cases}
 %
 d_{\mathbb A} & a_0 \in q' \\
 %
 0 & \textrm{otherwise,}
 %
-\end{cases}
-\]
-so that $\sum_{a \in q'} w'(a) = \sum_{a \in q'} w(a) + d_{q'}$.
+\end{cases} \] so that $\sum_{a \in q'} w'(a) = \sum_{a \in q'} w(a) + d_{q'}$.
 %
 Then
 %
@@ -1377,24 +1375,20 @@ Then
 %
 \sum_{a \in \mathbb A} 2w(a) &+ d_{\mathbb A} + 2 \\
 %
-&= \left( \sum_{a \in \mathbb A} w(a)  + 1\right)
-+  \left( \sum_{a \in \mathbb A} w'(a) + 1\right) \\
+&= \left( \sum_{a \in \mathbb A} w(a)  + 1\right) +  \left( \sum_{a \in \mathbb
+A} w'(a) + 1\right) \\
 %
-&\le \sum_{a \in q}  2w(a)
-+    \sum_{a \in q'} 2w'(a) \\
+&\le \sum_{a \in q}  2w(a) +    \sum_{a \in q'} 2w'(a) \\
 %
-&= \sum_{a \in q}  2w(a)
-+  \sum_{a \in q'} 2w(a) + 2d_{q'}\\
+&= \sum_{a \in q}  2w(a) +  \sum_{a \in q'} 2w(a) + 2d_{q'}\\
 %
-&= \sum_{a \in q \cup q'} 2w(a)
-+  \sum_{a \in q \cap q'} 2w(a) + 2d_{q'}\\
+&= \sum_{a \in q \cup q'} 2w(a) +  \sum_{a \in q \cap q'} 2w(a) + 2d_{q'}\\
 %
-&\le \sum_{a \in \mathbb A} 2w(a)
-+    \sum_{a \in q \cap q'} 2w(a) + 2d_{q'}\\
+&\le \sum_{a \in \mathbb A} 2w(a) +    \sum_{a \in q \cap q'} 2w(a) + 2d_{q'}\\
 %
-\end{split}\] so that $\sum_{a \in q \cap q'} 2w(a) \ge d_{\mathbb
-A} + 2 - 2d_{q'} = 2 \pm d_\mathbb A \ge 1$ and hence $q \cap q' \ne
-\varnothing$ as desired.  \end{proof}
+\end{split}\] so that $\sum_{a \in q \cap q'} 2w(a) \ge d_{\mathbb A} + 2 -
+2d_{q'} = 2 \pm d_\mathbb A \ge 1$ and hence $q \cap q' \ne \varnothing$ as
+desired.  \end{proof}
 
 \begin{corollary} \label{weights-equal} If $w : \mathbb A \to \mathbb N$ is a
 weight function then \[M(w) \frown M(w).\]  \end{corollary}
@@ -1468,15 +1462,15 @@ $\chosen{i}{b_2}$ then ${v_i(b_1) = v_i(b_2)}$.  \end{theorem}
 \begin{proof} If $\chosen{i}{b_1}$ then the Paxos invariants imply the Synod
 invariants for instance $i$.  In more detail, let
 \[\begin{array}{rl}
-Q^\textrm{I}(b) &= \QI{e(b)}, \\
-Q^\textrm{II}(b) &= \QII{e(i)}, \\
-\fprom{}{a}{b} &= \fprom{i}{a}{b} \\
+Q^\textrm{I}(b) &\triangleq \QI{e(b)}, \\
+Q^\textrm{II}(b) &\triangleq \QII{e(i)}, \\
+\fprom{}{a}{b} &\triangleq \fprom{i}{a}{b} \\
 & \ {}\vee \exists i' \le i. \mprom{i'}{a}{b}, \\
-\bprom{}{a}{b}{b'} &= \bprom{i}{a}{b}{b'}, \\
-\prop{}{b} &= \prop{i}{b}, \\
-\acc{}{a}{b} &= \acc{i}{a}{b}, \\
-\chosen{}{b} &= \chosen{i}{b} \textrm{ and} \\
-v(b) &= v_i(b) .\\
+\bprom{}{a}{b}{b'} &\triangleq \bprom{i}{a}{b}{b'}, \\
+\prop{}{b} &\triangleq \prop{i}{b}, \\
+\acc{}{a}{b} &\triangleq \acc{i}{a}{b}, \\
+\chosen{}{b} &\triangleq \chosen{i}{b} \textrm{ and} \\
+v(b) &\triangleq v_i(b) .\\
 \end{array}
 \]
 Synod's invariant \ref{synod-quorums} follows from lemma
