--- a/paxos.bib
+++ b/paxos.bib
@@ -216,10 +216,24 @@ year         = {2005},
 }
 
 @book{isabelle-hol,
-   author = {Nipkow, Tobias and Wenzel, Markus and Paulson, Lawrence C.},
-    title = {Isabelle/HOL: A Proof Assistant for Higher-order Logic},
-     year = {2002},
-      isbn = {3-540-43376-7},
-       publisher = {Springer-Verlag},
-        address = {Berlin, Heidelberg},
+  author = {Nipkow, Tobias and Wenzel, Markus and Paulson, Lawrence C.},
+  title = {Isabelle/HOL: A Proof Assistant for Higher-order Logic},
+  year = {2002},
+  isbn = {3-540-43376-7},
+  publisher = {Springer-Verlag},
+  address = {Berlin, Heidelberg},
 }
+
+@inproceedings{lampson,
+ author = {Lampson, Butler W.},
+ title = {How to Build a Highly Available System Using Consensus},
+ booktitle = {Proceedings of the 10th International Workshop on Distributed Algorithms},
+ series = {WDAG '96},
+ year = {1996},
+ isbn = {3-540-61769-8},
+ pages = {1--17},
+ numpages = {17},
+ acmid = {675640},
+ publisher = {Springer-Verlag},
+ address = {London, UK, UK},
+} 
