--- a/paxos-reconf.tex
+++ b/paxos-reconf.tex
@@ -1480,7 +1480,10 @@ v_i(b_2)$ as required.  \end{proof}
 \section*{Acknowledgment}
 
 The author would like to thank Leslie Lamport, Dahlia Malkhi and Leander
-Nikolaus Jehl for their advice and comments on earlier drafts of this paper.
+Nikolaus Jehl for their encouragement and comments on earlier drafts of this
+paper.
+
+The author is also grateful to Tracsis plc for supporting this work.
 
 
 
