Wording in proof

--- a/paxos-reconf.tex
+++ b/paxos-reconf.tex
@@ -1344,9 +1344,9 @@ commissioned.
 N$ are weight functions such that $\sum_{a \in \mathbb A} |w'(a) - w(a)| \le 1$
 then $M(w) \frown M(w')$.  \end{theorem}
 
-\begin{proof}Since $w$ and $w'$ take integer values, they must differ at at
-  most one node by at most $1$. Let $a_0$ be the node such that $|w'(a_0) -
-  w(a_0)| \le 1$ and $w(a) = w'(a)$ for all $a \ne a_0$.
+\begin{proof}Since $w$ and $w'$ take integer values they must take equal values
+  except possibly at a single node, so let $a_0$ be a node such that $w(a) =
+  w'(a)$ for all $a \ne a_0$.
 %
 Let $q \in M(w)$ and $q' \in M(w')$. By the definition of $M$, and since $w$
 and $w'$ take only integer values,
